--- a/ItensCadastrados/Itenscadastro2.css
+++ b/ItensCadastrados/Itenscadastro2.css
@@ -11,6 +11,25 @@
   width: 110%;
 
 }
+.iconesPagination {
+  font-size: 20px;
+}
+@media only screen and (max-width: 600px) {
+  .iconesPagination  {
+    font-size: 15px;
+  }
+  #inputGroupSelect01 {
+    width: 80px;
+    font-size: xx-small;
+   
+  }
+  
+  #inputGroupSelect02 {
+    width: 80px;
+    font-size: xx-small;
+   
+  }
+}
 
 @media only screen and (max-width: 800px) {
   .mt-3 {
@@ -40,6 +59,9 @@
     width: 100%;
     margin-left: 25px;
   }
+  .MenuSUPERIOR {
+    color: white;
+  }
  
   
 
@@ -49,14 +71,20 @@
     background-color: #CDE1B7;
     border: none;
     font-size: x-small;
-    margin-left: 2%;
+    height: 30px;
+    text-align: center;
+    margin-left: -20%;
   }
   
   #inputGroupSelect02 {
-    width: 100px;
+    width: 80px;
     font-size: x-small;
+    height: 30px;
+    text-align: center;
   }
-  
+  .iconesPagination  {
+  font-size: 15px;
+}
  
 
 }
