--- a/PaginaPrincipal/PaginaPrincipal.css
+++ b/PaginaPrincipal/PaginaPrincipal.css
@@ -1,102 +1,165 @@
-/* AJUSTE NO MAIN PARA POSICIONAR MENU LATERAL E CARD */
-main {
-    display: flex;
-    justify-content: space-between;
-}
-
-/*ESTILIZAÇÃO DO MENU LATERAL*/
-.menuLateral {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.MenuLATERAL {
     background-color: #5C7243;
-    max-width: 270px;
-    padding-top: 10px;
-    color: #ffffff;
-    padding-bottom: 200px;
+    width: 80%;
+    height: 100%;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
-.menuLateral .list-group-item {
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: column;
+.MenuLATERAL .row {
+    width: 110%;
+
+}
+
+.card {
+    background-color: #A3C977;
+    border-radius: 20px;
+    height: 200px;
+
+}
+
+.card-title {
+    text-align: center;
+    color: #354129;
+    text-decoration: none;
+}
+
+.col-9 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+@media only screen and (max-width: 800px) {
+    .mt-3 {
+        font-size: small;
+        border-bottom: 0px;
+    }
+
+    .MenuLATERAL {
+        min-width: 90px;
+    }
+
+
+
+
+}
+
+
+@media only screen and (max-width: 460px) {
+    .col-9 {
+        width: 100%;
+        margin-left: 30px;
+
+    }
+
+    .table {
+        width: 100%;
+    }
+
+    .containerCard {
+        width: 100%;
+        margin-left: 25px;
+    }
+
+    .MenuSUPERIOR {
+        color: white;
+    }
+
+
+
+
+
+
+
+}
+
+
+@media only screen and (min-width: 461px) {
+
+    .containerCard {
+        margin-left: -8%;
+    }
+
+}
+
+.container a {
+    color: white;
+    text-decoration: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+.dropdown-menu {
+    width: 13%;
+}
+
+.dropdown-menu,
+.dropdown-item:hover {
     background-color: #5C7243;
-    max-width: 270px;
-    padding: 15px 25px 15px 0;
+
 }
 
-.menuLateral .list-group-item a {
-    margin-left: 20px;
-    color: #ffffff;
-    text-decoration: none;
-    font-weight: 600;
+.mt-3 {
+    border-bottom: 1px solid #dee2e6;
+
 }
 
-.menuLateral p {
-    padding-top: 30px;
-}
-
-#link-usuario:hover {
-    color: #CDE1B7;
-}
-
-#link-usuario {
-    text-decoration: none;
-    color: #ffffff;
-}
-
-/*ESTILIZAÇÃO DO SUBMENU*/
-.menuLateral .dropdown .list-group-item {
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: column;
+.MenuSUPERIOR {
     background-color: #5C7243;
-    max-width: 270px;
-    padding: 15px 25px 16px 0;
-    border: none;
-}
-
-.menuLateral .dropdown .list-group-item a {
-    margin: 0;
-}
-
-.menuLateral .dropdown {
-    margin-left: 20px;
-    color: #ffffff;
-    text-decoration: none;
-    font-weight: 600;
-    display: block;
-}
-
-.menuLateral .dropdown .dropdown-menu {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     position: relative;
+}
+
+.MenuSUPERIOR button {
     background-color: #5C7243;
     border: none;
 }
 
-.menuLateral .dropdown:hover .dropdown-menu {
-    display: block;
-    padding-left: 20px;
+.MenuSUPERIOR button:hover {
+    background-color: #97b871;
+    transition: 1.0s;
 }
 
-.menuLateral .dropdown .list-group-item:hover {
-    color: #ffffff;
+.container span {
+    border: none;
+    color: white;
+    background-color: #5C7243;
 }
 
-/* Estilização para ocultar o botão de menu quando a tela for maior que 600px */
-.menu-toggle {
-    display: none;
+.MenuSUPERIOR .dropdown-menu {
+    width: 20%;
+    position: absolute;
+    background-color: #5C7243;
+
 }
 
-/*ESTILIZAÇÃO RODAPÉ*/
+.MenuSUPERIOR .navbar {
+    width: 40%;
+    background-color: #5C7243;
+    text-align: center;
+}
+
+
+
+
+.container .row {
+    display: flex;
+    margin-top: 10px;
+
+}
+
+.containerCard {
+    background-color: #CDE1B7;
+    color: #466F17;
+    border-radius: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
 #rodape {
     background-color: #5C7243;
-}
 
-#frase-impacto {
-    color: #FFFFFF;
 }
 
 #botao-atendimento {
@@ -104,337 +167,27 @@ main {
     background-color: #A3C977;
     font-size: smaller;
     border-radius: 20px;
-    text-decoration: none;
+    border: none;
 }
 
-/*ESTILIZAÇÃO CARDS*/
-#container-card {
-    display: flex;
-    justify-content: center;
-    margin-left: -350px;
-    margin-top: 4px;
-    margin-bottom: 30px;
+#frase-impacto {
+    color: #FFFFFF;
+    border: none;
 }
 
-.card {
-    background-color: #A3C977;
-    border-radius: 20px;
-    max-width: 280px;
-    height: 200px;
+.row {
+    width: 100%;
 }
 
-.card-title {
-    text-align: center;
-    color: #354129;
+.footer {
+    bottom: 0;
 }
 
 .card-text {
     text-align: center;
+    text-decoration: none;
 }
 
 a {
     text-decoration: none;
-}
-
-@media only screen and (max-width: 1200px) {
-    .menuLateral {
-        display: none;
-    }
-
-    .menuLateral.active {
-        display: flex;
-    }
-
-    .menu-toggle {
-        display: flex;
-        background: #5C7243;
-        color: #ffffff;
-        border: none;
-        cursor: pointer;
-        margin-top: 10px;
-        gap: 650px;
-    }
-
-    .menu-toggle-img {
-        margin-left: 40px;
-    }
-
-    .dropdown-menu {
-        background: #5C7243;
-        border: none;
-        font-size: larger;
-    }
-
-    .dropdown-menu a {
-        color: #ffffff;
-        text-decoration: none;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
-    .dropdown-menu a:hover {
-        color: #A3C977;
-    }
-
-    .dropdown {
-        color: #ffffff;
-        text-decoration: none;
-    }
-
-    .dropdown .dropdown-menu .list-group-item {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        background-color: #5C7243;
-        height: 40px;
-        border: none;
-        position: relative;
-    }
-
-    .dropdown .dropdown-menu {
-        position: relative;
-        font-size: large;
-        padding-left: 10px;
-    }
-
-    .dropdown:hover .dropdown-menu,
-    .dropdown .dropdown-menu a:hover {
-        display: block;
-    }
-
-    header {
-        display: flex;
-        padding-right: 5000px;
-    }
-
-    .corMenu {
-        display: flex;
-        background-color: #5C7243;
-        position: absolute;
-        width: 1200px;
-        top: 0;
-        height: 80px;
-    }
-
-    body {
-        overflow-x: hidden;
-    }
-
-    #container-card {
-        display: flex;
-        justify-content: center;
-        margin-left: -480px;
-        margin-top: 85px;
-        margin-bottom: 30px;
-    }
-
-    .card {
-        background-color: #A3C977;
-        border-radius: 20px;
-        max-width: 280px;
-        height: 260px;
-    }
-}
-
-@media only screen and (max-width: 1100px) {
-    .menu-toggle {
-        gap: 550px;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    .menuLateral {
-        display: none;
-    }
-
-    .menuLateral.active {
-        display: flex;
-    }
-
-    .menu-toggle {
-        display: flex;
-        background: #5C7243;
-        color: #ffffff;
-        border: none;
-        cursor: pointer;
-        margin-top: 10px;
-        gap: 400px;
-    }
-
-    .menu-toggle-img {
-        margin-left: 40px;
-    }
-
-    #botao-abrir-menu {
-        background: #5C7243;
-        border: none;
-        color: #ffffff;
-        font-size: larger;
-        margin-left: 550px;
-    }
-
-    header {
-        display: flex;
-        padding-right: 5000px;
-    }
-
-    .corMenu {
-        display: flex;
-        background-color: #5C7243;
-        position: absolute;
-        width: 1200px;
-        top: 0;
-        height: 80px;
-    }
-
-    body {
-        overflow-x: hidden;
-    }
-
-    #container-card {
-        display: flex;
-        justify-content: center;
-        margin-left: -400px;
-        margin-top: 85px;
-        margin-bottom: 30px;
-    }
-
-    .card {
-        background-color: #A3C977;
-        border-radius: 20px;
-        max-width: 200px;
-        height: 260px;
-    }
-}
-
-@media only screen and (max-width: 900px) {
-    .menu-toggle {
-        gap: 300px;
-    }
-}
-
-@media only screen and (max-width: 777px) {
-    .menuLateral {
-        display: none;
-    }
-
-    .menuLateral.active {
-        display: flex;
-    }
-
-    .menu-toggle {
-        display: flex;
-        background: #5C7243;
-        color: #ffffff;
-        border: none;
-        cursor: pointer;
-        margin-top: 10px;
-        gap: 200px;
-    }
-
-    .menu-toggle-img {
-        margin-left: 40px;
-    }
-
-    header {
-        display: flex;
-        padding-right: 5000px;
-    }
-
-    .corMenu {
-        display: flex;
-        background-color: #5C7243;
-        position: absolute;
-        width: 1200px;
-        top: 0;
-        height: 80px;
-    }
-
-    body {
-        overflow-x: hidden;
-    }
-
-    #container-card {
-        display: flex;
-        justify-content: center;
-        margin-left: -200px;
-        margin-top: 85px;
-        margin-bottom: 30px;
-    }
-
-    .card {
-        background-color: #A3C977;
-        border-radius: 20px;
-        max-width: 400px;
-        height: 180px;
-    }
-}
-
-@media only screen and (max-width: 595px) {
-    .menu-toggle {
-        gap: 40px;
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    .menuLateral {
-        display: none;
-    }
-
-    .menuLateral.active {
-        display: flex;
-    }
-
-    .menu-toggle {
-        display: flex;
-        background: #5C7243;
-        color: #ffffff;
-        border: none;
-        cursor: pointer;
-        margin-top: 10px;
-        gap: 240px;
-    }
-
-    .menu-toggle-img {
-        margin-left: 40px;
-    }
-
-    header {
-        display: flex;
-    }
-
-    .corMenu {
-        display: flex;
-        background-color: #5C7243;
-        position: absolute;
-        width: 750px;
-        top: 0;
-        height: 80px;
-    }
-
-    footer {
-        display: flex;
-        margin-right: -330px;
-        margin-left: -100px;
-    }
-
-    #rodape-conteudo {
-        margin-left: 50px;
-    }
-
-    #container-card {
-        display: flex;
-        justify-content: center;
-        margin-left: -200px;
-        margin-right: -300px;
-        margin-top: 85px;
-        margin-bottom: 30px;
-    }
-
-    .card {
-        background-color: #A3C977;
-        border-radius: 20px;
-        
-       
-    }
 }
