--- a/CadastroItens/CadastroItens.css
+++ b/CadastroItens/CadastroItens.css
@@ -13,6 +13,7 @@ main {
   max-width: 270px;
   padding-top: 10px;
   color: #ffffff;
+  padding-bottom: 180px;
 }
 
 .menuLateral .list-group-item {
@@ -103,6 +104,7 @@ main {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left: 300px;
   margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .containerCard h2 {
@@ -116,6 +118,7 @@ main {
 .containerCard label {
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
 }
 
 .containerCard input {
@@ -123,12 +126,12 @@ main {
   border: none;
   border-radius: 10px;
   padding: 10px;
-  margin-bottom: 20px;
 }
 
 .containerCard .botoesCadastro {
   display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .cancelar,
