--- a/CadastroItens/CadastroItens.css
+++ b/CadastroItens/CadastroItens.css
@@ -1,41 +1,3 @@
-/* AJUSTE NO MAIN PARA POSICIONAR MENU LATERAL E CARD */
-main {
-  display: flex;
-  justify-content: space-between;
-}
-
-/*ESTILIZAÇÃO DO MENU LATERAL*/
-.menuLateral {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  background-color: #5C7243;
-  max-width: 270px;
-  padding-top: 10px;
-  color: #ffffff;
-}
-
-.menuLateral .list-group-item {
-  display: flex;
-  justify-content: center;
-  align-items: start;
-  flex-direction: column;
-  background-color: #5C7243;
-  max-width: 270px;
-  padding: 15px 25px 15px 0;
-}
-
-.menuLateral .list-group-item a {
-  margin-left: 20px;
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: 600;
-}
-
-.menuLateral p {
-  padding-top: 30px;
-}
-
 #link-usuario:hover {
   color: #CDE1B7;
 }
@@ -45,66 +7,15 @@ main {
   color: #ffffff;
 }
 
-/*ESTILIZAÇÃO DO SUBMENU*/
-.menuLateral .dropdown .list-group-item {
-  display: flex;
-  justify-content: center;
-  align-items: start;
-  flex-direction: column;
-  background-color: #5C7243;
-  max-width: 270px;
-  padding: 15px 25px 16px 0;
-  border: none;
-}
-
-.menuLateral .dropdown .list-group-item a {
-  margin: 0;
-}
-
-.menuLateral .dropdown {
-  margin-left: 20px;
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: 600;
-  display: block;
-}
-
-.menuLateral .dropdown .dropdown-menu {
-  position: relative;
-  background-color: #5C7243;
-  border: none;
-}
-
-.menuLateral .dropdown:hover .dropdown-menu {
-  display: block;
-  padding-left: 20px;
-}
-
-.menuLateral .dropdown .list-group-item:hover {
-  color: #ffffff;
-}
-
-/* Estilização para ocultar o botão de menu quando a tela for maior que 600px */
-.menu-toggle {
-  display: none;
-}
-
-/* ESTILIZAÇÃO DO CARD */
 .containerCard {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   background-color: #CDE1B7;
   color: #466F17;
-  width: 450px;
+  width: 650px;
   padding: 20px 20px 10px 20px;
   border-radius: 20px;
-  margin: auto;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin-left: 300px;
-  margin-top: 50px;
+  
 }
-
 .containerCard h2 {
   display: flex;
   justify-content: center;
@@ -163,11 +74,6 @@ main {
   height: 150px;
 }
 
-.corMenu {
-  display: none;
-}
-
-/*ESTILIZAÇÃO RODAPÉ*/
 #rodape {
   background-color: #5C7243;
 }
@@ -187,265 +93,158 @@ main {
   color: #ffffff;
   text-decoration: none;
 }
-
-@media only screen and (max-width: 1300px) {
-  .containerCard {
-    margin-left: 200px;
-  }
+form input {
+  width: 100%;
 }
 
-@media only screen and (max-width: 1100px) {
-  .containerCard {
-    margin-left: 150px;
-  }
+.MenuLATERAL {
+  background-color: #5C7243;
+  width: 80%;
+  height: 100%;
+  color: white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
-@media only screen and (max-width: 1000px) {
-  .containerCard {
-    margin-left: 100px;
-  }
+.MenuLATERAL .row {
+  width: 110%;
+
 }
 
-@media only screen and (max-width: 900px) {
-  .containerCard {
-    margin-left: 50px;
-  }
+
+
+
+.col-9 {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 @media only screen and (max-width: 800px) {
-  .containerCard {
-    margin-left: 5px;
+  .mt-3 {
+      font-size: small;
+      border-bottom: 0px;
   }
+
+  .MenuLATERAL {
+      min-width: 90px;
+  }
+
 }
 
-@media only screen and (max-width: 750px) {
-  .menuLateral {
-    display: none;
-  }
 
-  .menuLateral.active {
-    display: flex;
-  }
-
-  .menu-toggle {
-    display: flex;
-    background: #5C7243;
-    color: #ffffff;
-    border: none;
-    cursor: pointer;
-    margin-top: 10px;
-    gap: 200px;
-  }
-
-  .menu-toggle-img {
-    margin-left: 40px;
-  }
-
-  .dropdown-menu {
-    background: #5C7243;
-    border: none;
-    font-size: larger;
-  }
-
-  .dropdown-menu a {
-    color: #ffffff;
-    text-decoration: none;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .dropdown-menu a:hover {
-    color: #A3C977;
-  }
-
-  .dropdown {
-    color: #ffffff;
-    text-decoration: none;
-  }
-
-  .dropdown .dropdown-menu .list-group-item {
-    display: flex;
+@media only screen and (max-width: 460px) {
+ 
+  
+  .col-9 {
+    width: 100%;
     justify-content: center;
-    flex-direction: column;
-    background-color: #5C7243;
-    height: 40px;
-    border: none;
-    position: relative;
   }
-
-  .dropdown .dropdown-menu {
-    position: relative;
-    font-size: large;
-    padding-left: 10px;
-  }
-
-  .dropdown:hover .dropdown-menu,
-  .dropdown .dropdown-menu a:hover {
-    display: block;
-  }
-
-  header {
-    display: flex;
-    padding-right: 100px;
-  }
-
-  .corMenu {
-    display: flex;
-    background-color: #5C7243;
-    position: absolute;
-    width: 750px;
-    top: 0;
-    height: 80px;
-  }
-
-  body {
-    overflow-x: hidden;
-  }
-
-  .containerCard {
-    margin-top: 100px;
-    margin-bottom: 20px;
-    margin-left: 110px;
-  }
-}
-
-@media only screen and (max-width: 595px) {
-  .menu-toggle {
-    gap: 40px;
-  }
-
-  .containerCard {
-    margin-top: 100px;
-    margin-bottom: 20px;
-    margin-left: 25px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .menuLateral {
-    display: none;
-  }
-
-  .menuLateral.active {
-    display: flex;
-  }
-
-  .menu-toggle {
-    display: flex;
-    background: #5C7243;
-    color: #ffffff;
-    border: none;
-    cursor: pointer;
-    margin-top: 10px;
-    gap: 20px;
-  }
-
-  .menu-toggle-img {
+   .containerCard {
+    width: 100%;
     margin-left: 40px;
+    justify-content: center;
   }
-
-  #botao-abrir-menu {
-    background: #5C7243;
-    border: none;
-    color: #ffffff;
-    font-size: larger;
-    margin-left: 550px;
-  }
-
-  header {
-    display: flex;
-  }
-
-  .corMenu {
-    display: flex;
-    background-color: #5C7243;
-    position: absolute;
-    width: 750px;
-    top: 0;
-    height: 80px;
-  }
-
-  .containerCard {
-    margin-top: 150px;
-    margin-bottom: 60px;
-    margin-left: 18px;
-  }
-
-  footer {
-    display: flex;
-    margin-right: -50px;
-    margin-left: -110px;
-  }
-
-  #frase-impacto {
-    font-size: medium;
-  }
-
-  #rodape-conteudo {
-    margin-left: 50px;
+  .MenuSUPERIOR {
+      color: white;
+      
   }
 }
 
-@media only screen and (max-width: 430px) {
-  .menuLateral {
-    display: none;
-  }
+.container a {
+  color: white;
+  text-decoration: none;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
-  .menuLateral.active {
-    display: flex;
-  }
-
-  .menu-toggle {
-    display: flex;
-    background: #5C7243;
-    color: #ffffff;
-    border: none;
-    cursor: pointer;
-    margin-top: 10px;
-    gap: 250px;
-  }
-
-  .menu-toggle-img {
-    margin-left: 40px;
-  }
-
-  #botao-abrir-menu {
-    background: #5C7243;
-    border: none;
-    color: #ffffff;
-    font-size: larger;
-    margin-left: 550px;
-  }
-
-  header {
-    display: flex;
-  }
-
-  .corMenu {
-    display: flex;
-    background-color: #5C7243;
-    position: absolute;
-    width: 750px;
-    top: 0;
-    height: 80px;
-  }
-
-  .containerCard {
-    margin-top: 150px;
-    margin-bottom: 80px;
-    margin-left: 150px;
-  }
-
-  footer {
-    display: flex;
-    margin-right: -330px;
-    margin-left: -100px;
-  }
-
-  #rodape-conteudo {
-    margin-left: 50px;
-  }
 }
-form input {
+
+.dropdown-menu {
+  width: 13%;
+}
+
+.dropdown-menu,
+.dropdown-item:hover {
+  background-color: #5C7243;
+
+}
+
+.mt-3 {
+  border-bottom: 1px solid #dee2e6;
+
+}
+
+.MenuSUPERIOR {
+  background-color: #5C7243;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  position: relative;
+}
+
+.MenuSUPERIOR button {
+  background-color: #5C7243;
+  border: none;
+}
+
+.MenuSUPERIOR button:hover {
+  background-color: #97b871;
+  transition: 1.0s;
+}
+
+.container span {
+  border: none;
+  color: white;
+  background-color: #5C7243;
+}
+
+.MenuSUPERIOR .dropdown-menu {
+  width: 20%;
+  position: absolute;
+  background-color: #5C7243;
+
+}
+
+.MenuSUPERIOR .navbar {
+  width: 40%;
+  background-color: #5C7243;
+  text-align: center;
+}
+
+.containerCard {
+  background-color: #CDE1B7;
+  color: #466F17;
+  border-radius: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#rodape {
+  background-color: #5C7243;
+
+}
+
+#botao-atendimento {
+  color: #FFFFFF;
+  background-color: #A3C977;
+  font-size: smaller;
+  border-radius: 20px;
+  border: none;
+}
+
+#frase-impacto {
+  color: #FFFFFF;
+  border: none;
+}
+
+.row {
   width: 100%;
+}
+
+.footer {
+  bottom: 0;
+}
+
+.card-text {
+  text-align: center;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
 }
