--- a/CadastroItens/CadastroItens.css
+++ b/CadastroItens/CadastroItens.css
@@ -14,6 +14,7 @@
   padding: 20px 20px 10px 20px;
   border-radius: 20px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ 
   
 }
 
@@ -249,3 +250,10 @@ form input {
 a {
   text-decoration: none;
 }
+.input-invalido {
+  border: 2px solid rgb(230, 35, 35) !important; /* Use !important para garantir que a borda vermelha seja aplicada */
+}   
+.input-valido {
+  border: 2px solid rgb(23, 177, 23) !important; /* Use !important para garantir que a borda verde seja aplicada */
+}
+
