--- a/ItensCadastrados/ItensCadastrados.css
+++ b/ItensCadastrados/ItensCadastrados.css
@@ -37,10 +37,6 @@
   color: white;
 }
 
-.MenuSUPERIOR .dropdown {
-  
-}
-
 .MenuSUPERIOR ul {
   padding-left: 20px;
 }
@@ -50,6 +46,10 @@
 }
 
 .MenuSUPERIOR button:hover {
+  background-color: #97b871;
+}
+
+#dropdownMenuButton {
   background-color: #97b871;
 }
 
@@ -66,8 +66,8 @@ a {
   background-color: #5C7243;
 }
 
-.MenuSUPERIOR .mt-2:hover {
-  color: #97b871;
+.MenuSUPERIOR .mt-2 {
+  color: white;
 }
 
 #menuSUPERIOR li:hover {
@@ -158,6 +158,7 @@ table th:nth-child(4) {
   font-size: smaller;
   border-radius: 20px;
   border: none;
+  padding-right: 10PX;
 }
 
 #frase-impacto {
