adicionado os id

--- a/ItensCadastrados/ItensCadastrados.css
+++ b/ItensCadastrados/ItensCadastrados.css
@@ -43,6 +43,7 @@
 
 .MenuSUPERIOR button {
   border: none;
+  
 }
 
 .MenuSUPERIOR button:hover {
@@ -50,7 +51,7 @@
 }
 
 #dropdownMenuButton {
-  background-color: #97b871;
+  background-color: #5C7243;
 }
 
 .btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
