--- a/PaginaInicial/PaginaInicial.css
+++ b/PaginaInicial/PaginaInicial.css
@@ -278,3 +278,12 @@ svg {
 .intro h1 {
     color: #5C7243;
 }
+.mt-3 {
+    border-bottom: 1px solid #dee2e6;
+    }
+  .mt-3 a:hover,
+  .mt-3:hover,
+  .dropdown-item a:hover {
+   color: #97b871;
+   
+  }
