--- a/PerfilUsuario/PerfilUsuario.css
+++ b/PerfilUsuario/PerfilUsuario.css
@@ -20,7 +20,7 @@ body {
   justify-content: center;
   background-color: #CDE1B7;
   color: #466F17;
-  margin: 30px auto;
+  margin: 60px auto;
   width: 500px;
   padding: 20px;
   border-radius: 20px;
@@ -69,5 +69,9 @@ body {
     padding: 20px;
     border-radius: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+
+  .containerCard {
+    margin: 130px auto;
   }
 }
